// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuickOpenModal Basic render with mount & searchType = functions 1`] = `
<QuickOpenModal
  clearHighlightLineRange={[Function]}
  closeQuickOpen={[Function]}
  enabled={true}
  highlightLineRange={[Function]}
  query="@"
  searchType="functions"
  selectLocation={[Function]}
  setQuickOpenQuery={[Function]}
  sources={Array []}
  symbols={
    Object {
      "functions": Array [],
      "variables": Array [],
    }
  }
  tabs={Array []}
>
  <Slide
    handleClose={[Function]}
    in={true}
  >
    <Transition
      appear={true}
      enter={true}
      exit={true}
      in={true}
      mountOnEnter={false}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      timeout={175}
      unmountOnExit={false}
    >
      <Modal
        handleClose={[Function]}
        status="entering"
      >
        <div
          className="modal-wrapper"
          onClick={[Function]}
        >
          <div
            className="modal entering"
            onClick={[Function]}
          >
            <SearchInput
              count={0}
              expanded={false}
              handleClose={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="Search sources…"
              query="@"
              selectedItemId=""
              showErrorEmoji={true}
              size=""
              summaryMsg="0 results"
            >
              <div
                aria-expanded={false}
                aria-haspopup="listbox"
                aria-owns="result-list"
                className="search-field"
                role="combobox"
              >
                <Svg
                  name="sad-face"
                >
                  <InlineSVG
                    className="sad-face "
                    element="i"
                    raw={false}
                    src="<svg></svg>"
                  >
                    <i
                      className="sad-face "
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "<svg></svg>",
                        }
                      }
                      src={null}
                    />
                  </InlineSVG>
                </Svg>
                <input
                  aria-activedescendant=""
                  aria-autocomplete="list"
                  aria-controls="result-list"
                  className="empty"
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Search sources…"
                  spellCheck={false}
                  value="@"
                />
                <div
                  className="summary"
                >
                  0 results
                </div>
                <CloseButton
                  buttonClass=""
                  handleClick={[Function]}
                >
                  <div
                    className="close-btn"
                    onClick={[Function]}
                  >
                    <img
                      className="close"
                    />
                  </div>
                </CloseButton>
              </div>
            </SearchInput>
            <ResultList
              expanded={false}
              items={Array []}
              key="results"
              role="listbox"
              selectItem={[Function]}
              selected={0}
              size="small"
            >
              <ul
                aria-live="polite"
                className="result-list small"
                id="result-list"
                role="listbox"
              />
            </ResultList>
          </div>
        </div>
      </Modal>
    </Transition>
  </Slide>
</QuickOpenModal>
`;

exports[`QuickOpenModal Basic render with mount & searchType = variables 1`] = `
<QuickOpenModal
  clearHighlightLineRange={[Function]}
  closeQuickOpen={[Function]}
  enabled={true}
  highlightLineRange={[Function]}
  query="#"
  searchType="variables"
  selectLocation={[Function]}
  setQuickOpenQuery={[Function]}
  sources={Array []}
  symbols={
    Object {
      "functions": Array [],
      "variables": Array [],
    }
  }
  tabs={Array []}
>
  <Slide
    handleClose={[Function]}
    in={true}
  >
    <Transition
      appear={true}
      enter={true}
      exit={true}
      in={true}
      mountOnEnter={false}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      timeout={175}
      unmountOnExit={false}
    >
      <Modal
        handleClose={[Function]}
        status="entering"
      >
        <div
          className="modal-wrapper"
          onClick={[Function]}
        >
          <div
            className="modal entering"
            onClick={[Function]}
          >
            <SearchInput
              count={0}
              expanded={false}
              handleClose={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="Search sources…"
              query="#"
              selectedItemId=""
              showErrorEmoji={true}
              size=""
              summaryMsg="0 results"
            >
              <div
                aria-expanded={false}
                aria-haspopup="listbox"
                aria-owns="result-list"
                className="search-field"
                role="combobox"
              >
                <Svg
                  name="sad-face"
                >
                  <InlineSVG
                    className="sad-face "
                    element="i"
                    raw={false}
                    src="<svg></svg>"
                  >
                    <i
                      className="sad-face "
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "<svg></svg>",
                        }
                      }
                      src={null}
                    />
                  </InlineSVG>
                </Svg>
                <input
                  aria-activedescendant=""
                  aria-autocomplete="list"
                  aria-controls="result-list"
                  className="empty"
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Search sources…"
                  spellCheck={false}
                  value="#"
                />
                <div
                  className="summary"
                >
                  0 results
                </div>
                <CloseButton
                  buttonClass=""
                  handleClick={[Function]}
                >
                  <div
                    className="close-btn"
                    onClick={[Function]}
                  >
                    <img
                      className="close"
                    />
                  </div>
                </CloseButton>
              </div>
            </SearchInput>
            <ResultList
              expanded={false}
              items={Array []}
              key="results"
              role="listbox"
              selectItem={[Function]}
              selected={0}
              size="small"
            >
              <ul
                aria-live="polite"
                className="result-list small"
                id="result-list"
                role="listbox"
              />
            </ResultList>
          </div>
        </div>
      </Modal>
    </Transition>
  </Slide>
</QuickOpenModal>
`;

exports[`QuickOpenModal Basic render with mount 1`] = `
<QuickOpenModal
  clearHighlightLineRange={[Function]}
  closeQuickOpen={[Function]}
  enabled={true}
  highlightLineRange={[Function]}
  query=""
  searchType="sources"
  selectLocation={[Function]}
  setQuickOpenQuery={[Function]}
  sources={Array []}
  tabs={Array []}
>
  <Slide
    handleClose={[Function]}
    in={true}
  >
    <Transition
      appear={true}
      enter={true}
      exit={true}
      in={true}
      mountOnEnter={false}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      timeout={175}
      unmountOnExit={false}
    >
      <Modal
        handleClose={[Function]}
        status="entering"
      >
        <div
          className="modal-wrapper"
          onClick={[Function]}
        >
          <div
            className="modal entering"
            onClick={[Function]}
          >
            <SearchInput
              count={0}
              expanded={false}
              handleClose={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="Search sources…"
              query=""
              selectedItemId=""
              showErrorEmoji={true}
              size=""
              summaryMsg="0 results"
            >
              <div
                aria-expanded={false}
                aria-haspopup="listbox"
                aria-owns="result-list"
                className="search-field"
                role="combobox"
              >
                <Svg
                  name="magnifying-glass"
                >
                  <InlineSVG
                    className="magnifying-glass "
                    element="i"
                    raw={false}
                    src="<svg></svg>"
                  >
                    <i
                      className="magnifying-glass "
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "<svg></svg>",
                        }
                      }
                      src={null}
                    />
                  </InlineSVG>
                </Svg>
                <input
                  aria-activedescendant=""
                  aria-autocomplete="list"
                  aria-controls="result-list"
                  className=""
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Search sources…"
                  spellCheck={false}
                  value=""
                />
                <div
                  className="summary"
                >
                  0 results
                </div>
                <CloseButton
                  buttonClass=""
                  handleClick={[Function]}
                >
                  <div
                    className="close-btn"
                    onClick={[Function]}
                  >
                    <img
                      className="close"
                    />
                  </div>
                </CloseButton>
              </div>
            </SearchInput>
            <ResultList
              expanded={false}
              items={Array []}
              key="results"
              role="listbox"
              selectItem={[Function]}
              selected={0}
              size="big"
            >
              <ul
                aria-live="polite"
                className="result-list big"
                id="result-list"
                role="listbox"
              />
            </ResultList>
          </div>
        </div>
      </Modal>
    </Transition>
  </Slide>
</QuickOpenModal>
`;

exports[`QuickOpenModal Doesn't render when disabled 1`] = `""`;

exports[`QuickOpenModal Renders when enabled 1`] = `
<Slide
  handleClose={[Function]}
  in={true}
>
  <SearchInput
    count={0}
    expanded={false}
    handleClose={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder="Search sources…"
    query=""
    selectedItemId=""
    showErrorEmoji={true}
    size=""
    summaryMsg="0 results"
  />
  <ResultList
    expanded={false}
    items={Array []}
    key="results"
    role="listbox"
    selectItem={[Function]}
    selected={0}
    size="big"
  />
</Slide>
`;

exports[`QuickOpenModal Simple goto search query = :abc & searchType = goto 1`] = `
<QuickOpenModal
  clearHighlightLineRange={[Function]}
  closeQuickOpen={[Function]}
  enabled={true}
  highlightLineRange={[Function]}
  query=":abc"
  searchType="goto"
  selectLocation={[Function]}
  setQuickOpenQuery={[Function]}
  sources={Array []}
  symbols={
    Object {
      "functions": Array [],
      "variables": Array [],
    }
  }
  tabs={Array []}
>
  <Slide
    handleClose={[Function]}
    in={true}
  >
    <Transition
      appear={true}
      enter={true}
      exit={true}
      in={true}
      mountOnEnter={false}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      timeout={175}
      unmountOnExit={false}
    >
      <Modal
        handleClose={[Function]}
        status="entering"
      >
        <div
          className="modal-wrapper"
          onClick={[Function]}
        >
          <div
            className="modal entering"
            onClick={[Function]}
          >
            <SearchInput
              count={0}
              expanded={false}
              handleClose={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="Search sources…"
              query=":abc"
              selectedItemId=""
              showErrorEmoji={true}
              size=""
            >
              <div
                aria-expanded={false}
                aria-haspopup="listbox"
                aria-owns="result-list"
                className="search-field"
                role="combobox"
              >
                <Svg
                  name="sad-face"
                >
                  <InlineSVG
                    className="sad-face "
                    element="i"
                    raw={false}
                    src="<svg></svg>"
                  >
                    <i
                      className="sad-face "
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "<svg></svg>",
                        }
                      }
                      src={null}
                    />
                  </InlineSVG>
                </Svg>
                <input
                  aria-activedescendant=""
                  aria-autocomplete="list"
                  aria-controls="result-list"
                  className="empty"
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Search sources…"
                  spellCheck={false}
                  value=":abc"
                />
                <div
                  className="summary"
                />
                <CloseButton
                  buttonClass=""
                  handleClick={[Function]}
                >
                  <div
                    className="close-btn"
                    onClick={[Function]}
                  >
                    <img
                      className="close"
                    />
                  </div>
                </CloseButton>
              </div>
            </SearchInput>
          </div>
        </div>
      </Modal>
    </Transition>
  </Slide>
</QuickOpenModal>
`;

exports[`QuickOpenModal closeModal 1`] = `
<QuickOpenModal
  clearHighlightLineRange={[Function]}
  closeQuickOpen={[Function]}
  enabled={true}
  highlightLineRange={[Function]}
  query=""
  searchType="sources"
  selectLocation={[Function]}
  setQuickOpenQuery={[Function]}
  sources={Array []}
  tabs={Array []}
>
  <Slide
    handleClose={[Function]}
    in={true}
  >
    <Transition
      appear={true}
      enter={true}
      exit={true}
      in={true}
      mountOnEnter={false}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      timeout={175}
      unmountOnExit={false}
    >
      <Modal
        handleClose={[Function]}
        status="entering"
      >
        <div
          className="modal-wrapper"
          onClick={[Function]}
        >
          <div
            className="modal entering"
            onClick={[Function]}
          >
            <SearchInput
              count={0}
              expanded={false}
              handleClose={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="Search sources…"
              query=""
              selectedItemId=""
              showErrorEmoji={true}
              size=""
              summaryMsg="0 results"
            >
              <div
                aria-expanded={false}
                aria-haspopup="listbox"
                aria-owns="result-list"
                className="search-field"
                role="combobox"
              >
                <Svg
                  name="magnifying-glass"
                >
                  <InlineSVG
                    className="magnifying-glass "
                    element="i"
                    raw={false}
                    src="<svg></svg>"
                  >
                    <i
                      className="magnifying-glass "
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "<svg></svg>",
                        }
                      }
                      src={null}
                    />
                  </InlineSVG>
                </Svg>
                <input
                  aria-activedescendant=""
                  aria-autocomplete="list"
                  aria-controls="result-list"
                  className=""
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Search sources…"
                  spellCheck={false}
                  value=""
                />
                <div
                  className="summary"
                >
                  0 results
                </div>
                <CloseButton
                  buttonClass=""
                  handleClick={[Function]}
                >
                  <div
                    className="close-btn"
                    onClick={[Function]}
                  >
                    <img
                      className="close"
                    />
                  </div>
                </CloseButton>
              </div>
            </SearchInput>
            <ResultList
              expanded={false}
              items={Array []}
              key="results"
              role="listbox"
              selectItem={[Function]}
              selected={0}
              size="big"
            >
              <ul
                aria-live="polite"
                className="result-list big"
                id="result-list"
                role="listbox"
              />
            </ResultList>
          </div>
        </div>
      </Modal>
    </Transition>
  </Slide>
</QuickOpenModal>
`;

exports[`QuickOpenModal updateResults on enable 1`] = `
<QuickOpenModal
  clearHighlightLineRange={[Function]}
  closeQuickOpen={[Function]}
  enabled={false}
  highlightLineRange={[Function]}
  query=""
  searchType="sources"
  selectLocation={[Function]}
  setQuickOpenQuery={[Function]}
  sources={Array []}
  tabs={Array []}
/>
`;

exports[`QuickOpenModal updateResults on enable 2`] = `
<QuickOpenModal
  clearHighlightLineRange={[Function]}
  closeQuickOpen={[Function]}
  enabled={true}
  highlightLineRange={[Function]}
  query=""
  searchType="sources"
  selectLocation={[Function]}
  setQuickOpenQuery={[Function]}
  sources={Array []}
  tabs={Array []}
>
  <Slide
    handleClose={[Function]}
    in={true}
  >
    <Transition
      appear={true}
      enter={true}
      exit={true}
      in={true}
      mountOnEnter={false}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      timeout={175}
      unmountOnExit={false}
    >
      <Modal
        handleClose={[Function]}
        status="entering"
      >
        <div
          className="modal-wrapper"
          onClick={[Function]}
        >
          <div
            className="modal entering"
            onClick={[Function]}
          >
            <SearchInput
              count={0}
              expanded={false}
              handleClose={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="Search sources…"
              query=""
              selectedItemId=""
              showErrorEmoji={true}
              size=""
              summaryMsg="0 results"
            >
              <div
                aria-expanded={false}
                aria-haspopup="listbox"
                aria-owns="result-list"
                className="search-field"
                role="combobox"
              >
                <Svg
                  name="magnifying-glass"
                >
                  <InlineSVG
                    className="magnifying-glass "
                    element="i"
                    raw={false}
                    src="<svg></svg>"
                  >
                    <i
                      className="magnifying-glass "
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "<svg></svg>",
                        }
                      }
                      src={null}
                    />
                  </InlineSVG>
                </Svg>
                <input
                  aria-activedescendant=""
                  aria-autocomplete="list"
                  aria-controls="result-list"
                  className=""
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Search sources…"
                  spellCheck={false}
                  value=""
                />
                <div
                  className="summary"
                >
                  0 results
                </div>
                <CloseButton
                  buttonClass=""
                  handleClick={[Function]}
                >
                  <div
                    className="close-btn"
                    onClick={[Function]}
                  >
                    <img
                      className="close"
                    />
                  </div>
                </CloseButton>
              </div>
            </SearchInput>
            <ResultList
              expanded={false}
              items={Array []}
              key="results"
              role="listbox"
              selectItem={[Function]}
              selected={0}
              size="big"
            >
              <ul
                aria-live="polite"
                className="result-list big"
                id="result-list"
                role="listbox"
              />
            </ResultList>
          </div>
        </div>
      </Modal>
    </Transition>
  </Slide>
</QuickOpenModal>
`;
